second commit, sravanthis work

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "google-maps-react": "^1.1.2",
     "history": "^1.13.1",
     "react": "^16.2.0",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
     "react-gmaps": "^1.7.0",
     "react-image-file": "^0.1.0",
