--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "google-map-react": "^0.29.0",
     "google-maps-react": "^1.1.2",
     "history": "^1.13.1",
+    "leaflet": "^1.3.1",
+    "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
     "react-gmaps": "^1.7.0",
     "react-image-file": "^0.1.0",
+    "react-leaflet": "^1.8.2",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "react-util": "^3.0.1",
