--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
     "react-gmaps": "^1.7.0",
+    "react-google-maps": "^9.4.5",
     "react-image-file": "^0.1.0",
     "react-leaflet": "^1.8.2",
     "react-router-dom": "^4.2.2",
