--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
+    "react-dropdown": "^1.4.0",
+    "react-easy-chart": "^1.0.0",
     "react-gmaps": "^1.7.0",
     "react-google-maps": "^9.4.5",
     "react-image-file": "^0.1.0",
     "react-leaflet": "^1.8.2",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
+    "react-select-plus": "^1.2.0",
     "react-util": "^3.0.1",
     "superagent": "^3.8.2"
   },
