--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "react-select-plus": "^1.2.0",
+    "react-transition-group": "^2.2.1",
     "react-util": "^3.0.1",
+    "reactstrap": "^4.8.0",
     "superagent": "^3.8.2"
   },
   "scripts": {
