--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "google-map-react": "^0.29.0",
     "google-maps-react": "^1.1.2",
     "history": "^1.13.1",
     "leaflet": "^1.3.1",
+    "leaflet.markercluster": "^1.3.0",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
@@ -16,7 +18,8 @@
     "react-gmaps": "^1.7.0",
     "react-google-maps": "^9.4.5",
     "react-image-file": "^0.1.0",
-    "react-leaflet": "^1.8.2",
+    "react-leaflet": "^1.9.0",
+    "react-leaflet-markercluster": "^1.1.8",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "react-select-plus": "^1.2.0",
