--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "history": "^1.13.1",
     "leaflet": "^1.3.1",
     "leaflet.markercluster": "^1.3.0",
+    "moment": "^2.21.0",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
@@ -20,6 +21,7 @@
     "react-image-file": "^0.1.0",
     "react-leaflet": "^1.9.0",
     "react-leaflet-markercluster": "^1.1.8",
+    "react-moment": "^0.7.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "react-select-plus": "^1.2.0",
